# micrograd-cpp

./: .gitignore  CMakeLists.txt  README.md
examples/: train_mnist.cpp
include/: engine.hpp  loss.hpp  mnist_loader.hpp  nn.hpp  optimizer.hpp
src/: engine.cpp  loss.cpp  mnist_loader.cpp  nn.cpp  optimizer.cpp
tests/: test_autograd.cpp  test_training.cpp
